overflow fixed

--- a/style.css
+++ b/style.css
@@ -42,7 +42,10 @@ h1 {
 
 .output-field {
     font-size: 3rem;
-    padding: 3rem;
+    padding: 0 3rem;
+    width: 300px;
+    height: 150px;
+    overflow: scroll;
 }
 
 .boards-container {
